Added Adagrad, RMSprop and Adam
Add Gradient descent algorithms with adaptive learning rate

--- a/Optimization in ML/Gradient_descent/Practical_1.ipynb
+++ b/Optimization in ML/Gradient_descent/Practical_1.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Vanilla Batch GD\n",
-    "lr_batch_GD = lr.Linear_regression(X, y)\n",
+    "lr_batch_GD = lr.Linear_Regression(X, y)\n",
     "theta = lr_batch_GD.fit(solver=\"batch\", alpha=1e-3)\n",
     "lr_batch_GD.show_summary()\n",
     "lr_batch_GD.plot_LR_2D()\n",
@@ -310,7 +310,7 @@
     }
    ],
    "source": [
-    "lr_batch_multiV = lr.Linear_regression(X, y)\n",
+    "lr_batch_multiV = lr.Linear_Regression(X, y)\n",
     "theta = lr_batch_multiV.fit(alpha=1e-4)\n",
     "lr_batch_multiV.show_summary()\n",
     "lr_batch_multiV.plot_MSE()"
