--- a/Optimization in ML/Gradient_descent/Practical_2.ipynb
+++ b/Optimization in ML/Gradient_descent/Practical_2.ipynb
@@ -70,7 +70,7 @@
     "# Test Toy data on model, the points and line should coincide\n",
     "X = np.atleast_2d(x).T\n",
     "y = np.atleast_2d(y).T\n",
-    "lr_test_vanilla = lr.Linear_regression(X, y)\n",
+    "lr_test_vanilla = lr.Linear_Regression(X, y)\n",
     "lr_test_vanilla.fit(solver=\"batch\", stop_criteria=1e-4)\n",
     "lr_test_vanilla.show_summary()\n",
     "lr_test_vanilla.plot_LR_2D()\n",
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "lr_test_mini = lr.Linear_regression(X, y)\n",
+    "lr_test_mini = lr.Linear_Regression(X, y)\n",
     "lr_test_mini.fit(solver=\"mini_batch\", stop_criteria=1e-3, n_batches=4, alpha=1e-5, max_epochs=1e4, seed=500)\n",
     "lr_test_mini.show_summary()\n",
     "lr_test_mini.plot_LR_2D()\n",
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "lr_test_st = lr.Linear_regression(X, y)\n",
+    "lr_test_st = lr.Linear_Regression(X, y)\n",
     "lr_test_st.fit(solver=\"stochastic\", stop_criteria=1e-3, alpha=1e-5, max_epochs=1e4)\n",
     "lr_test_st.show_summary()\n",
     "lr_test_st.plot_LR_2D()\n",
@@ -342,7 +342,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Batch GD\n",
-    "lr_batch = lr.Linear_regression(X, y)\n",
+    "lr_batch = lr.Linear_Regression(X, y)\n",
     "theta = lr_batch.fit(solver=\"batch\", alpha=1e-3, max_epochs=1e3)\n",
     "lr_batch.show_summary()\n",
     "lr_batch.plot_LR_2D(show_trials=True)"
@@ -419,7 +419,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Mini Batch GD\n",
-    "lr_mini_batch = lr.Linear_regression(X, y)\n",
+    "lr_mini_batch = lr.Linear_Regression(X, y)\n",
     "theta = lr_mini_batch.fit(solver=\"mini_batch\", alpha=1e-4, max_epochs=1e3, n_batches=8, stop_criteria=1e-4, seed=42)\n",
     "lr_mini_batch.show_summary()\n",
     "lr_mini_batch.plot_LR_2D(show_trials=True)"
@@ -498,7 +498,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Stochastic Batch GD\n",
-    "lr_stochastic = lr.Linear_regression(X, y)\n",
+    "lr_stochastic = lr.Linear_Regression(X, y)\n",
     "theta = lr_stochastic.fit(solver=\"stochastic\", alpha=1e-4, max_epochs=1e3, stop_criteria=1e-5)\n",
     "lr_stochastic.show_summary()\n",
     "lr_stochastic.plot_LR_2D(show_trials=True)"
@@ -575,7 +575,7 @@
     }
    ],
    "source": [
-    "lr_compare_vanilla = lr.Linear_regression(X, y)\n",
+    "lr_compare_vanilla = lr.Linear_Regression(X, y)\n",
     "lr_compare_vanilla.fit(solver=\"batch\", alpha=1e-3, stop_criteria=1e-3, max_epochs=1e4)\n",
     "lr_compare_vanilla.show_summary()\n",
     "lr_compare_vanilla.plot_LR_2D()\n",
@@ -622,7 +622,7 @@
     }
    ],
    "source": [
-    "lr_compare_mini = lr.Linear_regression(X, y)\n",
+    "lr_compare_mini = lr.Linear_Regression(X, y)\n",
     "lr_compare_mini.fit(solver=\"mini_batch\", alpha=1e-3, n_batches=2, stop_criteria=1e-3, max_epochs=1e4, seed=42)\n",
     "lr_compare_mini.show_summary()\n",
     "lr_compare_mini.plot_LR_2D()\n",
@@ -669,7 +669,7 @@
     }
    ],
    "source": [
-    "lr_compare_stoch = lr.Linear_regression(X, y)\n",
+    "lr_compare_stoch = lr.Linear_Regression(X, y)\n",
     "lr_compare_stoch.fit(solver=\"stochastic\", alpha=1e-3, stop_criteria=1e-3, max_epochs=1e4)\n",
     "lr_compare_stoch.show_summary()\n",
     "lr_compare_stoch.plot_LR_2D()\n",
@@ -725,7 +725,7 @@
     }
    ],
    "source": [
-    "lr_compare_mini = lr.Linear_regression(X, y)\n",
+    "lr_compare_mini = lr.Linear_Regression(X, y)\n",
     "lr_compare_mini.fit(solver=\"mini_batch\", alpha=1e-4, n_batches=2, stop_criteria=1e-3, max_epochs=1e4, seed=42)\n",
     "lr_compare_mini.show_summary()\n",
     "lr_compare_mini.plot_LR_2D()\n",
@@ -772,7 +772,7 @@
     }
    ],
    "source": [
-    "lr_compare_stoch = lr.Linear_regression(X, y)\n",
+    "lr_compare_stoch = lr.Linear_Regression(X, y)\n",
     "lr_compare_stoch.fit(solver=\"stochastic\", alpha=1e-4, stop_criteria=1e-3, max_epochs=1e4)\n",
     "lr_compare_stoch.show_summary()\n",
     "lr_compare_stoch.plot_LR_2D()\n",
@@ -828,7 +828,7 @@
     }
    ],
    "source": [
-    "lr_compare_mini = lr.Linear_regression(X, y)\n",
+    "lr_compare_mini = lr.Linear_Regression(X, y)\n",
     "lr_compare_mini.fit(solver=\"mini_batch\", alpha=1e-4, n_batches=2, stop_criteria=1e-5, max_epochs=1e4, seed=42)\n",
     "lr_compare_mini.show_summary()\n",
     "lr_compare_mini.plot_LR_2D()\n",
@@ -839,7 +839,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "2b77976f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -875,7 +877,7 @@
     }
    ],
    "source": [
-    "lr_compare_stoch = lr.Linear_regression(X, y)\n",
+    "lr_compare_stoch = lr.Linear_Regression(X, y)\n",
     "lr_compare_stoch.fit(solver=\"stochastic\", alpha=1e-4, stop_criteria=1e-5, max_epochs=1e4)\n",
     "lr_compare_stoch.show_summary()\n",
     "lr_compare_stoch.plot_LR_2D()\n",
