--- a/Optimization in ML/Gradient_descent/Practical_3.ipynb
+++ b/Optimization in ML/Gradient_descent/Practical_3.ipynb
@@ -69,7 +69,7 @@
     "# Test Toy data on model, the points and line should coincide\n",
     "X = np.atleast_2d(x).T\n",
     "y = np.atleast_2d(y).T\n",
-    "lr_test_momentum = lr.Linear_regression(X, y)\n",
+    "lr_test_momentum = lr.Linear_Regression(X, y)\n",
     "lr_test_momentum.fit(solver=\"momentum\", stop_criteria=1e-4)\n",
     "lr_test_momentum.show_summary()\n",
     "lr_test_momentum.plot_LR_2D()\n",
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "lr_test_NAG = lr.Linear_regression(X, y)\n",
+    "lr_test_NAG = lr.Linear_Regression(X, y)\n",
     "lr_test_NAG.fit(solver=\"Nesterov\", stop_criteria=1e-4)\n",
     "lr_test_NAG.show_summary()\n",
     "lr_test_NAG.plot_LR_2D()\n",
@@ -295,7 +295,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Momentum GD\n",
-    "lr_momentum = lr.Linear_regression(X, y)\n",
+    "lr_momentum = lr.Linear_Regression(X, y)\n",
     "theta = lr_momentum.fit(solver=\"momentum\", alpha=1e-3, max_epochs=1e3)\n",
     "lr_momentum.show_summary()\n",
     "lr_momentum.plot_LR_2D(show_trials=True)\n",
@@ -362,7 +362,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Momentum GD\n",
-    "lr_momentum = lr.Linear_regression(X, y)\n",
+    "lr_momentum = lr.Linear_Regression(X, y)\n",
     "theta = lr_momentum.fit(solver=\"momentum\", alpha=1e-3, max_epochs=1e3, gamma=0.2)\n",
     "lr_momentum.show_summary()\n",
     "lr_momentum.plot_LR_2D(show_trials=True)\n",
@@ -421,7 +421,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Momentum GD\n",
-    "lr_momentum = lr.Linear_regression(X, y)\n",
+    "lr_momentum = lr.Linear_Regression(X, y)\n",
     "theta = lr_momentum.fit(solver=\"momentum\", alpha=1e-4, max_epochs=1e3, gamma=0.9)\n",
     "lr_momentum.show_summary()\n",
     "lr_momentum.plot_LR_2D(show_trials=True)\n",
@@ -480,7 +480,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Momentum GD\n",
-    "lr_NAG = lr.Linear_regression(X, y)\n",
+    "lr_NAG = lr.Linear_Regression(X, y)\n",
     "theta = lr_NAG.fit(solver=\"momentum\", alpha=1e-3, max_epochs=1e3)\n",
     "lr_NAG.show_summary()\n",
     "lr_NAG.plot_LR_2D(show_trials=True)\n",
@@ -633,7 +633,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Momentum GD\n",
-    "lr_momentum_mv = lr.Linear_regression(X, y)\n",
+    "lr_momentum_mv = lr.Linear_Regression(X, y)\n",
     "theta = lr_momentum_mv.fit(solver=\"momentum\", alpha=1e-3, max_epochs=1e3, standardize=True)\n",
     "lr_momentum_mv.show_summary()\n",
     "lr_momentum_mv.plot_MSE()"
@@ -671,7 +671,7 @@
    "source": [
     "# Initialize object from class Linear regression and solve\n",
     "# Nesterov GD\n",
-    "lr_NAG_mv = lr.Linear_regression(X, y)\n",
+    "lr_NAG_mv = lr.Linear_Regression(X, y)\n",
     "theta = lr_NAG_mv.fit(solver=\"Nesterov\", alpha=1e-3, max_epochs=1e4, standardize=True)\n",
     "lr_NAG_mv.show_summary()\n",
     "lr_NAG_mv.plot_MSE()"
