Data sets loading path
csv files are now loaded from the same relative path as the notebooks

--- a/Optimization in ML/Gradient_descent/Practical_2.ipynb
+++ b/Optimization in ML/Gradient_descent/Practical_2.ipynb
@@ -275,7 +275,7 @@
    ],
    "source": [
     "# Read Data\n",
-    "df = pd.read_csv('resources/RegData.csv', header=None)\n",
+    "df = pd.read_csv('RegData.csv', header=None)\n",
     "df.head()"
    ]
   },
