--- a/Optimization in ML/Gradient_descent/Practical_3.ipynb
+++ b/Optimization in ML/Gradient_descent/Practical_3.ipynb
@@ -216,7 +216,7 @@
    ],
    "source": [
     "# Read Data\n",
-    "df = pd.read_csv('resources/RegData.csv', header=None)\n",
+    "df = pd.read_csv('RegData.csv', header=None)\n",
     "df.head()"
    ]
   },
@@ -584,7 +584,7 @@
    ],
    "source": [
     "# Multivarialble LR\n",
-    "df_mv = pd.read_csv('resources/MultipleLR.csv', header=None)\n",
+    "df_mv = pd.read_csv('MultipleLR.csv', header=None)\n",
     "df_mv.head()"
    ]
   },
